<resources>
    <string name="app_name">Football 2</string>
    <string name="favorite">Favorite</string>
    <string name="teams">Teams</string>
    <string name="prev_match">Prev Match</string>
    <string name="next_match">Next Match</string>
    <string name="detail">Match Detail</string>
    <string name="goal">Goal</string>
    <string name="shot">Shot</string>
    <string name="lineup">Lineup</string>
    <string name="vs">VS</string>
    <string name="keeper">Goal Keeper</string>
    <string name="def">Defender</string>
    <string name="mid">Midfield</string>
    <string name="Forw">Forward</string>
    <string name="sub">Subtitutes</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
