<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
            android:id="@+id/prev"
            android:enabled="true"
            android:title="@string/prev_match"
            android:icon="@drawable/match"
            app:showAsAction="ifRoom"/>
    <item
            android:id="@+id/next"
            android:enabled="true"
            android:title="@string/next_match"
            android:icon="@drawable/next_match"
            app:showAsAction="ifRoom"/>
    <item
            android:id="@+id/favorites"
            android:enabled="true"
            android:icon="@drawable/ic_favorites"
            android:title="@string/favorite"
            app:showAsAction="ifRoom" />
</menu>