<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <android.support.constraint.ConstraintLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".view.DetailMatchActivity">
    <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/swipe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
    </android.support.v4.widget.SwipeRefreshLayout>

        <ProgressBar
                android:id="@+id/pb"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible"
                app:layout_constraintTop_toBottomOf="@id/vs"
        />



        <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:layout_marginTop="10dp"
                android:textColor="@android:color/holo_orange_light"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
        />

        <ImageView
                android:id="@+id/img_team_home"
                android:background="@android:color/transparent"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@mipmap/ic_launcher"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/date"
        />
        <TextView
                android:id="@+id/home_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/img_team_home"
                app:layout_constraintLeft_toLeftOf="@id/img_team_home"
        />
        <TextView
                android:id="@+id/away_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/img_team_away"
                app:layout_constraintRight_toRightOf="@id/img_team_away"
        />
        <TextView
                android:id="@+id/vs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vs"
                android:textSize="20sp"
                app:layout_constraintTop_toBottomOf="@id/date"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="30dp"
        />
        <ImageView
                android:id="@+id/img_team_away"
                android:background="@android:color/transparent"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@mipmap/ic_launcher"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/date"
        />
        <TextView
                android:id="@+id/goal_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                app:layout_constraintLeft_toLeftOf="@id/img_team_home"
                app:layout_constraintTop_toBottomOf="@id/img_team_home"
        />
        <TextView
                android:id="@+id/goals"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Goals"
                android:textSize="15sp"
                android:textColor="@android:color/holo_orange_light"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@id/img_team_home"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
        />
        <TextView
                android:id="@+id/goal_away"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                app:layout_constraintRight_toRightOf="@id/img_team_away"
                app:layout_constraintTop_toBottomOf="@id/img_team_home"
        />
        <TextView
                android:id="@+id/shot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Shot"
                android:textSize="15sp"
                android:textColor="@android:color/holo_orange_light"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@id/goals"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
        />
        <TextView
                android:id="@+id/shot_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintLeft_toLeftOf="@id/goal_home"
                app:layout_constraintTop_toBottomOf="@id/goal_home"
        />
        <TextView
                android:id="@+id/shot_away"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintRight_toRightOf="@id/goal_away"
                app:layout_constraintTop_toBottomOf="@id/goal_away"
        />
        <TextView
                android:id="@+id/lineups"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lineup"
                android:textAlignment="center"
                android:textSize="20sp"
                android:layout_marginTop="20dp"
                android:background="@android:color/holo_orange_light"
                app:layout_constraintTop_toBottomOf="@id/shot"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
        />
        <TextView
                android:id="@+id/keeper"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/keeper"
                android:textSize="15sp"
                android:textColor="@android:color/holo_orange_light"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@id/lineups"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
        />
        <TextView
                android:id="@+id/keeper_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintLeft_toLeftOf="@id/shot_home"
                app:layout_constraintTop_toBottomOf="@id/keeper"
        />
        <TextView
                android:id="@+id/keeper_away"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/keeper"
        />
        <TextView
                android:id="@+id/defender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/def"
                android:textSize="15sp"
                android:textColor="@android:color/holo_orange_light"
                app:layout_constraintTop_toBottomOf="@id/keeper_home"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
        />
        <LinearLayout
                android:id="@+id/lay_def"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintLeft_toLeftOf="@id/shot_home"
                app:layout_constraintTop_toBottomOf="@id/defender"
                >

            <TextView
                    android:id="@+id/defender_home"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="5dp"
            />
            <TextView
                    android:id="@+id/defender_away"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="5dp"
            />
        </LinearLayout>
        <TextView
                android:id="@+id/mid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mid"
                android:textSize="15sp"
                android:textColor="@android:color/holo_orange_light"
                app:layout_constraintTop_toBottomOf="@id/lay_def"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
        />
        <LinearLayout
                android:id="@+id/lay_mid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintLeft_toLeftOf="@id/shot_home"
                app:layout_constraintTop_toBottomOf="@id/mid"
        >

            <TextView
                    android:id="@+id/mid_home"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="5dp"
            />
            <TextView
                    android:id="@+id/mid_away"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="5dp"
            />
        </LinearLayout>
        <TextView
                android:id="@+id/forw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Forw"
                android:textSize="15sp"
                android:textColor="@android:color/holo_orange_light"
                app:layout_constraintTop_toBottomOf="@id/lay_mid"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
        />
        <LinearLayout
                android:id="@+id/lay_forw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintLeft_toLeftOf="@id/shot_home"
                app:layout_constraintTop_toBottomOf="@id/forw"
        >

            <TextView
                    android:id="@+id/forw_home"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="5dp"
            />
            <TextView
                    android:id="@+id/forw_away"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="5dp"
            />
        </LinearLayout>
        <TextView
                android:id="@+id/sub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sub"
                android:textSize="15sp"
                android:textColor="@android:color/holo_orange_light"
                app:layout_constraintTop_toBottomOf="@id/lay_forw"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
        />
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintLeft_toLeftOf="@id/shot_home"
                app:layout_constraintTop_toBottomOf="@id/sub"
        >

            <TextView
                    android:id="@+id/sub_home"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="5dp"
            />
            <TextView
                    android:id="@+id/sub_away"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="5dp"
            />
        </LinearLayout>

    </android.support.constraint.ConstraintLayout>
</ScrollView>